--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -9,7 +9,7 @@
     }
   ],
   "dependencies": {
-    "com.unity.barracuda": "1.3.2-preview",
+    "com.unity.barracuda": "2.0.0",
     "jp.keijiro.noiseshader": "1.0.0",
     "com.unity.modules.audio": "1.0.0"
   }
